[gd_scene load_steps=3 format=3 uid="uid://test_optimized_system"]

[ext_resource type="Script" path="res://world/OptimizedSystemsRunner.gd" id="1_0"]
[ext_resource type="Script" path="res://world/TestOptimizedSystem.gd" id="2_0"]

[node name="TestOptimizedSystem" type="Node2D"]
script = ExtResource("2_0")

[node name="OptimizedSystemsRunner" type="Node" parent="."]
script = ExtResource("1_0")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 0)
zoom = Vector2(0.5, 0.5)

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatusLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_right = -10.0
offset_top = 10.0
offset_bottom = 200.0
text = "Optimized System Test
Status: Initializing...
Entities: 0
FPS: 0"
vertical_alignment = 1

[node name="ControlsLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = 400.0
offset_top = -150.0
offset_bottom = -10.0
text = "Controls:
1 - Spawn 100 entities
2 - Spawn 500 entities
3 - Spawn 1000 entities
C - Clear all entities
P - Print status"
vertical_alignment = 1
